--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Kosugi&display=swap");
+
 /*
-! tailwindcss v3.2.0 | MIT License | https://tailwindcss.com
+! tailwindcss v3.2.1 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -416,7 +420,7 @@ video {
   display: none;
 }
 
-*, ::before, ::after {
+*, ::before, ::after{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -463,7 +467,7 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-::-webkit-backdrop {
+::-webkit-backdrop{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -510,7 +514,7 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-::backdrop {
+::backdrop{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -557,126 +561,174 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.m-auto {
+.m-auto{
   margin: auto;
 }
 
-.my-10 {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
+.my-20{
+  margin-top: 5rem;
+  margin-bottom: 5rem;
 }
 
-.inline-block {
-  display: inline-block;
+.mx-2{
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 
-.flex {
+.flex{
   display: flex;
 }
 
-.inline-flex {
-  display: inline-flex;
-}
-
-.h-screen {
+.h-screen{
   height: 100vh;
 }
 
-.h-full {
+.h-full{
   height: 100%;
 }
 
-.h-12 {
-  height: 3rem;
+.h-20{
+  height: 5rem;
 }
 
-.w-screen {
+.h-32{
+  height: 8rem;
+}
+
+.w-screen{
   width: 100vw;
 }
 
-.w-full {
+.w-full{
   width: 100%;
 }
 
-.w-36 {
-  width: 9rem;
+.w-32{
+  width: 8rem;
 }
 
-.max-w-xl {
-  max-width: 36rem;
+.max-w-3xl{
+  max-width: 48rem;
 }
 
-.flex-col {
+.-translate-y-6{
+  --tw-translate-y: -1.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-rotate-12{
+  --tw-rotate: -12deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-12{
+  --tw-rotate: 12deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.flex-row{
+  flex-direction: row;
+}
+
+.flex-col{
   flex-direction: column;
 }
 
-.items-center {
+.items-center{
   align-items: center;
 }
 
-.justify-center {
-  justify-content: center;
+.justify-start{
+  justify-content: flex-start;
 }
 
-.rounded-md {
+.justify-around{
+  justify-content: space-around;
+}
+
+.gap-5{
+  gap: 1.25rem;
+}
+
+.rounded-md{
   border-radius: 0.375rem;
 }
 
-.border-2 {
+.border-2{
   border-width: 2px;
 }
 
-.border-blue-400 {
+.border-b-2{
+  border-bottom-width: 2px;
+}
+
+.border-gray-500{
   --tw-border-opacity: 1;
-  border-color: rgb(96 165 250 / var(--tw-border-opacity));
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
 }
 
-.bg-gray-400\/40 {
-  background-color: rgb(156 163 175 / 0.4);
+.border-black{
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
-.bg-red-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+.border-red-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(252 165 165 / var(--tw-border-opacity));
 }
 
-.bg-blue-300\/80 {
-  background-color: rgb(147 197 253 / 0.8);
+.object-contain{
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
-.bg-red-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
+.p-2{
+  padding: 0.5rem;
 }
 
-.text-center {
-  text-align: center;
+.p-5{
+  padding: 1.25rem;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.font-lobster{
+  font-family: Lobster;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+.font-kosugi{
+  font-family: Kosugi;
 }
 
-.font-bold {
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.font-bold{
   font-weight: 700;
 }
 
-.text-gray-500 {
+.text-red-300{
   --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
+  color: rgb(252 165 165 / var(--tw-text-opacity));
 }
 
-.text-white {
+.text-red-600{
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  color: rgb(220 38 38 / var(--tw-text-opacity));
 }
 
-.hover\:cursor-pointer:hover {
+.shadow-md{
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:cursor-pointer:hover{
   cursor: pointer;
+}
+
+@media (min-width: 768px){
+  .md\:justify-center{
+    justify-content: center;
+  }
 }
