--- a/public/style.css
+++ b/public/style.css
@@ -591,10 +591,6 @@ video {
   right: 0.5rem;
 }
 
-.top-0{
-  top: 0px;
-}
-
 .bottom-0{
   bottom: 0px;
 }
@@ -609,6 +605,10 @@ video {
 
 .left-1\/3{
   left: 33.333333%;
+}
+
+.top-0{
+  top: 0px;
 }
 
 .z-40{
@@ -642,8 +642,16 @@ video {
   margin-right: 1rem;
 }
 
+.mt-2{
+  margin-top: 0.5rem;
+}
+
 .mt-3{
   margin-top: 0.75rem;
+}
+
+.mt-12{
+  margin-top: 3rem;
 }
 
 .block{
@@ -696,10 +704,6 @@ video {
 
 .h-2\/3{
   height: 66.666667%;
-}
-
-.h-1\/2{
-  height: 50%;
 }
 
 .h-auto{
@@ -781,6 +785,11 @@ video {
 
 .translate-y-0{
   --tw-translate-y: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-x-14{
+  --tw-translate-x: -3.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -948,6 +957,11 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
+.border-red-400{
+  --tw-border-opacity: 1;
+  border-color: rgb(248 113 113 / var(--tw-border-opacity));
+}
+
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -984,11 +998,6 @@ video {
   padding-right: 0.5rem;
 }
 
-.py-52{
-  padding-top: 13rem;
-  padding-bottom: 13rem;
-}
-
 .py-10{
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
@@ -1001,6 +1010,14 @@ video {
 
 .pt-44{
   padding-top: 11rem;
+}
+
+.pt-52{
+  padding-top: 13rem;
+}
+
+.pb-32{
+  padding-bottom: 8rem;
 }
 
 .font-lobster{
@@ -1037,6 +1054,11 @@ video {
 .text-red-600{
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity));
+}
+
+.text-red-500{
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .shadow-md{
@@ -1094,8 +1116,16 @@ video {
     position: absolute;
   }
 
+  .md\:top-2{
+    top: 0.5rem;
+  }
+
   .md\:m-auto{
     margin: auto;
+  }
+
+  .md\:inline{
+    display: inline;
   }
 
   .md\:flex{
