--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,8 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Yuji+Syuku&display=swap");
+
 /*
 ! tailwindcss v3.2.1 | MIT License | https://tailwindcss.com
 */
@@ -575,8 +577,12 @@ video {
   position: relative;
 }
 
-.top-2{
-  top: 0.5rem;
+.sticky{
+  position: sticky;
+}
+
+.top-0{
+  top: 0px;
 }
 
 .left-1\/2{
@@ -607,8 +613,24 @@ video {
   left: 33.333333%;
 }
 
-.top-0{
-  top: 0px;
+.left-0{
+  left: 0px;
+}
+
+.top-32{
+  top: 8rem;
+}
+
+.left-full{
+  left: 100%;
+}
+
+.top-1\/2{
+  top: 50%;
+}
+
+.right-10{
+  right: 2.5rem;
 }
 
 .z-40{
@@ -642,16 +664,8 @@ video {
   margin-right: 1rem;
 }
 
-.mt-2{
-  margin-top: 0.5rem;
-}
-
 .mt-3{
   margin-top: 0.75rem;
-}
-
-.mt-12{
-  margin-top: 3rem;
 }
 
 .block{
@@ -666,8 +680,16 @@ video {
   display: flex;
 }
 
+.inline-flex{
+  display: inline-flex;
+}
+
 .hidden{
   display: none;
+}
+
+.h-20{
+  height: 5rem;
 }
 
 .h-screen{
@@ -676,10 +698,6 @@ video {
 
 .h-full{
   height: 100%;
-}
-
-.h-20{
-  height: 5rem;
 }
 
 .h-32{
@@ -714,12 +732,24 @@ video {
   height: 18rem;
 }
 
-.w-screen{
-  width: 100vw;
+.h-16{
+  height: 4rem;
+}
+
+.h-52{
+  height: 13rem;
+}
+
+.h-80{
+  height: 20rem;
 }
 
 .w-full{
   width: 100%;
+}
+
+.w-screen{
+  width: 100vw;
 }
 
 .w-32{
@@ -736,6 +766,22 @@ video {
 
 .w-72{
   width: 18rem;
+}
+
+.w-16{
+  width: 4rem;
+}
+
+.w-56{
+  width: 14rem;
+}
+
+.w-1\/2{
+  width: 50%;
+}
+
+.w-3\/4{
+  width: 75%;
 }
 
 .max-w-3xl{
@@ -758,6 +804,14 @@ video {
   max-width: 20rem;
 }
 
+.max-w-5xl{
+  max-width: 64rem;
+}
+
+.flex-shrink-0{
+  flex-shrink: 0;
+}
+
 .-translate-y-6{
   --tw-translate-y: -1.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -773,13 +827,8 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-x-12{
-  --tw-translate-x: -3rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-5{
-  --tw-translate-y: -1.25rem;
+.-translate-x-14{
+  --tw-translate-x: -3.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -788,8 +837,18 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-x-14{
-  --tw-translate-x: -3.5rem;
+.-translate-y-1\/2{
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-x-full{
+  --tw-translate-x: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-0{
+  --tw-translate-x: 0px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -845,12 +904,20 @@ video {
   flex-direction: row;
 }
 
+.flex-row-reverse{
+  flex-direction: row-reverse;
+}
+
 .flex-col{
   flex-direction: column;
 }
 
 .flex-wrap{
   flex-wrap: wrap;
+}
+
+.flex-nowrap{
+  flex-wrap: nowrap;
 }
 
 .items-end{
@@ -902,6 +969,14 @@ video {
        column-gap: 0.5rem;
 }
 
+.gap-y-2{
+  row-gap: 0.5rem;
+}
+
+.gap-y-4{
+  row-gap: 1rem;
+}
+
 .overflow-hidden{
   overflow: hidden;
 }
@@ -920,6 +995,10 @@ video {
 
 .rounded-3xl{
   border-radius: 1.5rem;
+}
+
+.rounded-xl{
+  border-radius: 0.75rem;
 }
 
 .border-2{
@@ -971,6 +1050,10 @@ video {
   background-color: rgb(203 213 225 / 0.5);
 }
 
+.bg-white\/70{
+  background-color: rgb(255 255 255 / 0.7);
+}
+
 .object-contain{
   -o-object-fit: contain;
      object-fit: contain;
@@ -1008,6 +1091,21 @@ video {
   padding-right: 1rem;
 }
 
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.py-5{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.px-7{
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
+}
+
 .pt-44{
   padding-top: 11rem;
 }
@@ -1020,6 +1118,18 @@ video {
   padding-bottom: 8rem;
 }
 
+.pt-16{
+  padding-top: 4rem;
+}
+
+.pt-32{
+  padding-top: 8rem;
+}
+
+.text-center{
+  text-align: center;
+}
+
 .font-lobster{
   font-family: Lobster;
 }
@@ -1030,6 +1140,10 @@ video {
 
 .font-dela{
   font-family: Dela Gothic One;
+}
+
+.font-syuku{
+  font-family: Yuji Syuku;
 }
 
 .text-2xl{
@@ -1047,6 +1161,11 @@ video {
   line-height: 1.75rem;
 }
 
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
+}
+
 .font-bold{
   font-weight: 700;
 }
@@ -1061,6 +1180,11 @@ video {
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .shadow-md{
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
@@ -1073,10 +1197,20 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-lg{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .transition-transform{
   transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.vertical-rl{
+  writing-mode: vertical-rl;
 }
 
 .vol2-item-li{
@@ -1107,11 +1241,33 @@ video {
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
+.hover\:w-3\/4:hover{
+  width: 75%;
+}
+
+.hover\:-translate-y-3:hover{
+  --tw-translate-y: -0.75rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:-translate-y-2:hover{
+  --tw-translate-y: -0.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .hover\:cursor-pointer:hover{
   cursor: pointer;
 }
 
+.hover\:opacity-100:hover{
+  opacity: 1;
+}
+
 @media (min-width: 768px){
+  .md\:static{
+    position: static;
+  }
+
   .md\:absolute{
     position: absolute;
   }
@@ -1120,8 +1276,16 @@ video {
     top: 0.5rem;
   }
 
+  .md\:right-20{
+    right: 5rem;
+  }
+
   .md\:m-auto{
     margin: auto;
+  }
+
+  .md\:block{
+    display: block;
   }
 
   .md\:inline{
@@ -1148,6 +1312,10 @@ video {
     height: 24rem;
   }
 
+  .md\:h-full{
+    height: 100%;
+  }
+
   .md\:w-1\/2{
     width: 50%;
   }
@@ -1156,8 +1324,37 @@ video {
     width: 33.333333%;
   }
 
+  .md\:w-80{
+    width: 20rem;
+  }
+
+  .md\:w-\[30\%\]{
+    width: 30%;
+  }
+
+  .md\:translate-x-0{
+    --tw-translate-x: 0px;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
   .md\:flex-row{
     flex-direction: row;
+  }
+
+  .md\:flex-col{
+    flex-direction: column;
+  }
+
+  .md\:flex-wrap{
+    flex-wrap: wrap;
+  }
+
+  .md\:items-start{
+    align-items: flex-start;
+  }
+
+  .md\:items-center{
+    align-items: center;
   }
 
   .md\:justify-center{
@@ -1166,5 +1363,45 @@ video {
 
   .md\:gap-0{
     gap: 0px;
+  }
+
+  .md\:bg-transparent{
+    background-color: transparent;
+  }
+
+  .md\:pt-32{
+    padding-top: 8rem;
+  }
+
+  .md\:pt-64{
+    padding-top: 16rem;
+  }
+
+  .md\:pl-80{
+    padding-left: 20rem;
+  }
+
+  .md\:text-left{
+    text-align: left;
+  }
+
+  .md\:text-8xl{
+    font-size: 6rem;
+    line-height: 1;
+  }
+
+  .md\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .md\:opacity-50{
+    opacity: 0.5;
+  }
+
+  .md\:transition-all{
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 150ms;
   }
 }
