--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Kosugi&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Yuji+Syuku&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
