--- a/public/style.css
+++ b/public/style.css
@@ -621,16 +621,16 @@ video {
   top: 8rem;
 }
 
-.left-full{
-  left: 100%;
-}
-
 .top-1\/2{
   top: 50%;
 }
 
 .right-10{
   right: 2.5rem;
+}
+
+.left-full{
+  left: 100%;
 }
 
 .z-40{
@@ -780,10 +780,6 @@ video {
   width: 50%;
 }
 
-.w-3\/4{
-  width: 75%;
-}
-
 .max-w-3xl{
   max-width: 48rem;
 }
@@ -837,13 +833,13 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-y-1\/2{
-  --tw-translate-y: -50%;
+.-translate-x-full{
+  --tw-translate-x: -100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-x-full{
-  --tw-translate-x: -100%;
+.-translate-y-1\/2{
+  --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1054,6 +1050,20 @@ video {
   background-color: rgb(255 255 255 / 0.7);
 }
 
+.bg-\[F7FCFE\]{
+  background-color: F7FCFE;
+}
+
+.bg-\[\#F7FCFE\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 252 254 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#f7fcfe\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 252 254 / var(--tw-bg-opacity));
+}
+
 .object-contain{
   -o-object-fit: contain;
      object-fit: contain;
@@ -1243,11 +1253,6 @@ video {
 
 .hover\:w-3\/4:hover{
   width: 75%;
-}
-
-.hover\:-translate-y-3:hover{
-  --tw-translate-y: -0.75rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .hover\:-translate-y-2:hover{
