--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,8 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Yuji+Syuku&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Sawarabi+Gothic&display=swap");
+
 /*
 ! tailwindcss v3.2.1 | MIT License | https://tailwindcss.com
 */
@@ -688,20 +690,32 @@ video {
   display: none;
 }
 
-.h-20{
-  height: 5rem;
-}
-
-.h-screen{
-  height: 100vh;
+.h-32{
+  height: 8rem;
 }
 
 .h-full{
   height: 100%;
 }
 
-.h-32{
-  height: 8rem;
+.h-auto{
+  height: auto;
+}
+
+.h-16{
+  height: 4rem;
+}
+
+.h-9{
+  height: 2.25rem;
+}
+
+.h-20{
+  height: 5rem;
+}
+
+.h-screen{
+  height: 100vh;
 }
 
 .h-40{
@@ -724,16 +738,8 @@ video {
   height: 66.666667%;
 }
 
-.h-auto{
-  height: auto;
-}
-
 .h-72{
   height: 18rem;
-}
-
-.h-16{
-  height: 4rem;
 }
 
 .h-52{
@@ -746,6 +752,10 @@ video {
 
 .w-full{
   width: 100%;
+}
+
+.w-36{
+  width: 9rem;
 }
 
 .w-screen{
@@ -780,6 +790,10 @@ video {
   width: 50%;
 }
 
+.max-w-5xl{
+  max-width: 64rem;
+}
+
 .max-w-3xl{
   max-width: 48rem;
 }
@@ -798,10 +812,6 @@ video {
 
 .max-w-xs{
   max-width: 20rem;
-}
-
-.max-w-5xl{
-  max-width: 64rem;
 }
 
 .flex-shrink-0{
@@ -940,6 +950,26 @@ video {
   justify-content: space-around;
 }
 
+.gap-8{
+  gap: 2rem;
+}
+
+.gap-20{
+  gap: 5rem;
+}
+
+.gap-2{
+  gap: 0.5rem;
+}
+
+.gap-4{
+  gap: 1rem;
+}
+
+.gap-6{
+  gap: 1.5rem;
+}
+
 .gap-5{
   gap: 1.25rem;
 }
@@ -977,12 +1007,16 @@ video {
   overflow: hidden;
 }
 
-.rounded-md{
-  border-radius: 0.375rem;
-}
-
 .rounded-lg{
   border-radius: 0.5rem;
+}
+
+.rounded-2xl{
+  border-radius: 1rem;
+}
+
+.rounded-md{
+  border-radius: 0.375rem;
 }
 
 .rounded-full{
@@ -1017,6 +1051,16 @@ video {
   border-bottom-width: 4px;
 }
 
+.border-black{
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.border-white{
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
 .border-gray-500{
   --tw-border-opacity: 1;
   border-color: rgb(107 114 128 / var(--tw-border-opacity));
@@ -1027,14 +1071,33 @@ video {
   border-color: rgb(252 165 165 / var(--tw-border-opacity));
 }
 
-.border-black{
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
-
 .border-red-400{
   --tw-border-opacity: 1;
   border-color: rgb(248 113 113 / var(--tw-border-opacity));
+}
+
+.bg-\[\#B1F98F\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(177 249 143 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#F5F5F5\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
+}
+
+.bg-gray-300\/20{
+  background-color: rgb(209 213 219 / 0.2);
+}
+
+.bg-\[\#8FC0F9\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(143 192 249 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#F98F8F\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 143 143 / var(--tw-bg-opacity));
 }
 
 .bg-white{
@@ -1048,15 +1111,6 @@ video {
 
 .bg-white\/70{
   background-color: rgb(255 255 255 / 0.7);
-}
-
-.bg-\[F7FCFE\]{
-  background-color: F7FCFE;
-}
-
-.bg-\[\#F7FCFE\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(247 252 254 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#f7fcfe\]{
@@ -1086,11 +1140,6 @@ video {
   padding: 1rem;
 }
 
-.px-2{
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
 .py-10{
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
@@ -1099,6 +1148,11 @@ video {
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .px-6{
@@ -1136,8 +1190,16 @@ video {
   padding-top: 8rem;
 }
 
+.text-left{
+  text-align: left;
+}
+
 .text-center{
   text-align: center;
+}
+
+.font-sawarabi{
+  font-family: Sawarabi Gothic;
 }
 
 .font-lobster{
@@ -1166,6 +1228,16 @@ video {
   line-height: 2.5rem;
 }
 
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -1180,6 +1252,16 @@ video {
   font-weight: 700;
 }
 
+.text-\[\#696363\]{
+  --tw-text-opacity: 1;
+  color: rgb(105 99 99 / var(--tw-text-opacity));
+}
+
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .text-red-600{
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity));
@@ -1188,11 +1270,6 @@ video {
 .text-red-500{
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .shadow-md{
@@ -1251,6 +1328,59 @@ video {
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
+.mini-item-title{
+  display: flex;
+  height: 2.25rem;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  border-radius: 1rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 700;
+  --tw-text-opacity: 1;
+  color: rgb(105 99 99 / var(--tw-text-opacity));
+}
+
+.gist-bord{
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+@media (min-width: 768px){
+  .gist-bord{
+    flex-direction: row;
+  }
+}
+
+.gist-file{
+  display: flex;
+  width: 100%;
+  flex-grow: 1;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 0.25rem;
+}
+
+@media (min-width: 768px){
+  .gist-file{
+    width: 50%;
+  }
+}
+
+.gist-data{
+  width: 100%;
+  flex-grow: 1;
+}
+
+.gist-meta{
+  width: 100%;
+}
+
 .hover\:w-3\/4:hover{
   width: 75%;
 }
@@ -1305,6 +1435,10 @@ video {
     display: none;
   }
 
+  .md\:h-9{
+    height: 2.25rem;
+  }
+
   .md\:h-72{
     height: 18rem;
   }
@@ -1321,8 +1455,16 @@ video {
     height: 100%;
   }
 
+  .md\:w-auto{
+    width: auto;
+  }
+
   .md\:w-1\/2{
     width: 50%;
+  }
+
+  .md\:w-20{
+    width: 5rem;
   }
 
   .md\:w-1\/3{
@@ -1366,12 +1508,29 @@ video {
     justify-content: center;
   }
 
+  .md\:justify-between{
+    justify-content: space-between;
+  }
+
+  .md\:gap-16{
+    gap: 4rem;
+  }
+
+  .md\:gap-4{
+    gap: 1rem;
+  }
+
   .md\:gap-0{
     gap: 0px;
   }
 
   .md\:bg-transparent{
     background-color: transparent;
+  }
+
+  .md\:px-8{
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 
   .md\:pt-32{
