--- a/src/style.css
+++ b/src/style.css
@@ -2,10 +2,28 @@
 @import url("https://fonts.googleapis.com/css2?family=Kosugi&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Yuji+Syuku&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Sawarabi+Gothic&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 .vol2-item-li {
   @apply before:block before:w-6 before:h-6 before:bg-black before:rounded-full hover:cursor-pointer transition-all hover:before:bg-red-500 opacity-50 hover:opacity-100;
+}
+
+.mini-item-title {
+  @apply flex items-center justify-center bg-[#F5F5F5] rounded-2xl w-full h-9 text-base font-bold text-[#696363];
+}
+
+.gist-bord {
+  @apply flex flex-col md:flex-row w-full gap-4;
+}
+.gist-file {
+  @apply flex flex-col items-center flex-grow pt-1 w-full md:w-1/2;
+}
+.gist-data {
+  @apply flex-grow w-full;
+}
+.gist-meta {
+  @apply w-full;
 }
